# MagicFoldersVST

./: .gitignore  ANALYSIS_AND_NAMING.md  AssetLoader.h  CMakeLists.txt  ColumnBrowserComponent.cpp  ColumnBrowserComponent.h  DEVELOPER_RUNDOWN.md  FinderTheme.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  SettingsComponents.cpp  SettingsComponents.h  SettingsOverlayComponent.cpp  SettingsOverlayComponent.h
.cursor/rules/: rebuild-workflow.mdc
Docs/: DetectionPipeline.md
Source/Detection/: ConfidenceGate.cpp  ConfidenceGate.h  DetectionConstants.h  DetectionPipeline.cpp  DetectionPipeline.h  DetectionV2.cpp  DetectionV2.h  FilenameBias.cpp  FilenameBias.h  HeuristicCategory.cpp  HeuristicCategory.h  HeuristicConstants.h  MelSpectrogram.cpp  MelSpectrogram.h  ModelRunner.cpp  ModelRunner.h  YamnetRunner.cpp  YamnetRunner.h
Source/Detection/DSP/: LoopOneShotDetector.cpp  LoopOneShotDetector.h  PercussiveHarmonicGate.cpp  PercussiveHarmonicGate.h  Resampler16kMono.cpp  Resampler16kMono.h  Windowing.cpp  Windowing.h
Source/Detection/Gating/: ConfidenceGate.cpp  ConfidenceGate.h
Source/Detection/Mapping/: CategoryMapper.cpp  CategoryMapper.h
Source/Detection/Yamnet/: YamnetModel.cpp  YamnetModel.h
assets/: InstrumentClassifier.onnx
assets/Models/: yamnet_head.onnx
training/: README_TRAINING.md  apply_corrections.py  colab_train.ipynb  data_sources.csv  download_cnn14.py  eval_model.py  fetch_freesound.py  model_constants.py  requirements.txt  train_and_export.py  train_yamnet_transfer.py  yamnet_to_onnx.py
